# windwarden

./: .claude-code.yml  .gitignore  .windwarden.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECTPLAN.md  README.md  RESOURCES.md  debug_test.tsx  default.nix  test-config-clean.json  test-cva-complex.tsx  test-phase2.tsx  test.tsx  test_custom_func.tsx  test_example.tsx
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: optimization_comparison.rs  performance.rs
docs/: COMPLETIONS.md  CUSTOM_SORTING_DEMO.md  GIT_INTEGRATION.md  PERFORMANCE.md  USAGE.md
docs/guides/: advanced-usage.md  configuration.md  getting-started.md  troubleshooting.md
docs/internal/: ARCHITECTUREPLAN.md  README.md  RESOURCES.md
scripts/: performance_test.rs
src/: atomic.rs  cli.rs  cli_new_backup.rs  config.rs  diff.rs  file_processor.rs  lib.rs  main.rs  optimizations.rs  output_backup.rs  output_old.rs  performance_utils.rs
src/cli/: mod.rs
src/output/: formats.rs  mod.rs  reporters.rs  text_formatter.rs
src/parser/: mod.rs  visitor.rs
src/processor/: mod.rs
src/sorter/: categories.rs  mod.rs
src/utils/: error.rs  mod.rs
test_dir/: test.js
test_fixtures/configs/: test-config.json
test_fixtures/reference/: TESTCASEREFERENCE.ts
test_fixtures/samples/: custom_sort_demo.tsx  demo_custom_functions.tsx  sort_test.tsx  test-all-patterns-final.tsx  test-phase3-comprehensive.tsx  test_permissions.tsx
tests/fixtures/: already_formatted.jsx  (+5 more)
(+24 files in other folders)
